# ghgest

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.config/: .markdownlint.yml  .yamlfmt  editorconfig-checker.json  mise.toml  rustfmt.toml  taplo.toml  tomlfmt.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  docs.yml  release.yml  security.yml
docs/: README.md
docs/design/: 0001-flat-files-over-sqlite.md  0002-zero-config-discovery.md  0003-reverse-hex-change-ids.md  0004-tasks-as-execution-plans.md  0005-cli-command-structure.md  0006-ui-components-as-display-types.md  0007-centralized-theme-system.md  0008-custom-logger-with-styled-stderr.md  0009-zero-config-discovery-toml-only.md  0010-atomic-ui-architecture.md  0012-sqlite-for-the-event-store.md  0013-global-only-storage-with-project-identity.md  0014-libsql-for-remote-database-support.md  0015-atoms-molecules-views-ui.md  0016-per-entity-gest-layout-as-live-source-of-truth.md  README.md
docs/dev/: README.md  ai.md  code-style.md  commits.md  tasks.md  testing.md
docs/policy/: README.md  ai.md  code-of-conduct.md  security.md
docs/process/: README.md  code-review.md  labels.md  writing-adrs.md  writing-rfcs.md
docs/site/: changelog.md  docusaurus.config.ts  faq.md  index.md  package.json  sidebars.ts  why-gest.md
docs/site/.vitepress/: config.ts
docs/site/cli/: artifact.md  config.md  generate.md  init.md  iteration.md  migrate.md  project.md  search.md  self-update.md  serve.md  tag.md  task.md  undo.md  version.md
docs/site/configuration/: index.md  theming.md
docs/site/docs/: changelog.md  faq.md  index.md  why-gest.md
docs/site/getting-started/: agent-orchestration.md  agents.md  concepts.md  installation.md  quick-start.md
docs/site/migration/: v0-4-to-v0-5.md
docs/site/public/: CNAME
docs/site/versioned_sidebars/: version-0.3-sidebars.json  version-0.4-sidebars.json
script/: install.sh
src/: action.rs  actions.rs  cli.rs  config.rs  error.rs  event_store.rs  logger.rs  logging.rs  main.rs  model.rs  server.rs  store.rs  test_helpers.rs  ui.rs  web.rs
src/action/: link.rs  set_status.rs  tag.rs  traits.rs  untag.rs
src/actions/: meta.rs  note.rs  tag.rs  transition.rs
src/cli/: capture.rs  commands.rs  editor.rs  git.rs  helpers.rs  meta_args.rs  pager.rs  web_notify.rs
src/cli/commands/: artifact.rs  config.rs  generate.rs  helpers.rs  init.rs  iteration.rs  json_utils.rs  migrate.rs  project.rs  purge.rs  search.rs  self_update.rs  serve.rs  tag.rs  tags.rs  task.rs  undo.rs  version.rs
src/config/: color_value.rs  colors.rs  database.rs  discovery.rs  env.rs  loader.rs  log.rs  pager.rs  serve.rs  storage.rs
src/io/: editor.rs  git.rs  pager.rs
src/model/: artifact.rs  event.rs  id.rs  iteration.rs  link.rs  note.rs  optional_datetime.rs  task.rs
src/server/: handlers.rs  request_log.rs  routes.rs  security_headers.rs  state.rs  templates.rs  watcher.rs
src/store/: artifact.rs  artifact_meta.rs  fs.rs  helpers.rs  iteration.rs  meta.rs  meta_value.rs  migration.rs  mod.rs  model.rs  note.rs  orchestration.rs  repo.rs  search.rs  search_query.rs  sync.rs  task.rs
src/store/migration/: m00001_create_projects.rs  m00002_create_project_workspaces.rs  m00003_create_authors.rs  m00004_create_tasks.rs  m00005_create_artifacts.rs  (+10 more)
src/ui/: atoms.rs  colors.rs  components.rs  composites.rs  envelope.rs  json.rs  layout.rs  markdown.rs  style.rs  theme.rs  theming.rs  utils.rs  views.rs
src/web/: handlers.rs  reload_ipc.rs  timeline.rs
tasks/: audit
tasks/check/: _default
tasks/dev/: docsite
tasks/format/: markdown  rust  toml  yaml
tasks/generate/: task-docs
tasks/lint/: editorconfig  markdown  rust  toml  yaml
tasks/test/: _default  integration  unit
templates/: base.html  dashboard.html  dashboard_content.html  forms.js  search.html
templates/artifacts/: create.html  detail.html  detail_content.html  edit.html  list.html
templates/iterations/: board.html  detail.html  detail_content.html  list.html  list_content.html
templates/tasks/: board.html  board_content.html  create.html  detail.html  detail_content.html  edit.html  list.html  list_content.html
tests/integration/: behavior.rs  commands.rs  main.rs  smoke.rs
(+442 files in other folders)
