[package]
categories = ["command-line-utilities", "development-tools"]
description = "Manage agent-generated artifacts and task backlogs alongside your project"
edition = "2024"
include = ["src/*", "build.rs", "LICENSE", "README.md"]
keywords = ["cli", "agent", "artifact", "task"]
license = "MIT"
name = "gest"
repository = "https://github.com/aaronmallen/gest"
version = "0.2.0"

[package.metadata.binstall]
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}.tar.gz"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
dir_spec = "0.5"
log = "0.4"
pulldown-cmark = "0.12"
rand = "0.10"
rayon = "1"
self_update = { version = "0.43", default-features = false, features = [
  "archive-tar",
  "compression-flate2",
  "reqwest",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
toml = "1"
typed-env = "0.3"
yaml_serde = "0.10"
yansi = { version = "1", features = ["detect-env", "detect-tty"] }

[dev-dependencies]
pretty_assertions = "1"
temp-env = "0.3"
