[package]
categories = ["command-line-utilities", "development-tools"]
description = "Manage agent-generated artifacts and task backlogs alongside your project"
edition = "2024"
include = ["src/*", "build.rs", "LICENSE", "README.md"]
keywords = ["cli", "agent", "artifact", "task"]
license = "MIT"
name = "gest"
repository = "https://github.com/aaronmallen/gest"
version = "0.3.1"

[package.metadata.binstall]
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}.tar.gz"

[dependencies]
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive"], version = "4" }
clap_complete = "4"
clap_mangen = "0.3"
dir_spec = "0.5"
log = "0.4"
pulldown-cmark = "0.13"
rand = "0.10"
rayon = "1"
semver = "1"
serde = { features = ["derive"], version = "1" }
shell-words = "1"
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
toml = "1"
typed-env = "0.3"
unicode-width = "0.2"
yaml_serde = "0.10"
yansi = { features = ["detect-env", "detect-tty", "hyperlink"], version = "1" }

[dependencies.self_update]
default-features = false
features = ["archive-tar", "compression-flate2", "reqwest", "rustls"]
version = "0.43"

[dev-dependencies]
pretty_assertions = "1"
temp-env = "0.3"
