[package]
categories = ["command-line-utilities", "development-tools"]
description = "Manage agent-generated artifacts and task backlogs alongside your project"
edition = "2024"
include = ["src/*", "templates/*", "build.rs", "LICENSE", "README.md"]
keywords = ["cli", "agent", "artifact", "task"]
license = "MIT"
name = "gest"
repository = "https://github.com/aaronmallen/gest"
version = "0.4.4"

[package.metadata.binstall]
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target}.tar.gz"

[dependencies]
askama = "0.15"
axum = "0.8"
chrono = { features = ["serde"], version = "0.4" }
clap = { features = ["derive"], version = "4" }
clap_complete = "4"
clap_mangen = "0.3"
dir_spec = "0.5"
form_urlencoded = "1"
getset = "0.1"
log = "0.4"
md5 = "0.8.0"
notify = "8"
open = "5"
pulldown-cmark = "0.13"
rand = "0.10"
rayon = "1"
rusqlite = { features = ["bundled"], version = "0.39" }
rust-embed = { features = ["include-exclude"], version = "8" }
semver = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
sha2 = "0.11"
shell-words = "1"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
tokio-stream = { features = ["sync"], version = "0.1" }
toml = "1"
tracing = "0.1"
typed-env = "0.3"
unicode-width = "0.2"
yaml_serde = "0.10"
yansi = { features = ["detect-env", "detect-tty", "hyperlink"], version = "1" }

[dependencies.libsql]
default-features = false
features = ["core", "remote"]
version = "0.9"

[dependencies.self_update]
default-features = false
features = ["archive-tar", "compression-flate2", "reqwest", "rustls"]
version = "0.44"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
serde_json = "1"
temp-env = "0.3"
tempfile = "3"
